--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "debug": "^4.3.4",
     "express": "^4.18.0",
     "express-validator": "^6.14.0",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongoose": "^6.3.1",
     "mongoose-timestamp": "^0.6.0",
